home_hack3/gcc_errors.txt
gcc  _mini.c -lm -DRNG_ALG=1
In file included from _mini.c:55:0:
_mccode-r.c: In function ‘mcdis_Circle’:
_mccode-r.c:2362:9: warning: implicit declaration of function ‘vec_prod’ [-Wimplicit-function-declaration]
         vec_prod(mx,my,mz, 0,1,0, nx,ny,nz);
         ^~~~~~~~
_mccode-r.c:2363:9: warning: implicit declaration of function ‘NORM’ [-Wimplicit-function-declaration]
         NORM(mx,my,mz);
         ^~~~
_mccode-r.c:2368:13: warning: implicit declaration of function ‘rotate’; did you mean ‘lstat’? [-Wimplicit-function-declaration]
             rotate(ux,uy,uz, mx,my,mz, i*2*PI/24, nx,ny,nz);
             ^~~~~~
             lstat
_mccode-r.c: In function ‘coords_mirror’:
_mccode-r.c:2550:14: warning: implicit declaration of function ‘scalar_prod’ [-Wimplicit-function-declaration]
   double t = scalar_prod(n.x, n.y, n.z, n.x, n.y, n.z);
              ^~~~~~~~~~~
_mccode-r.c: In function ‘rot_mul’:
_mccode-r.c:2665:5: warning: implicit declaration of function ‘rot_copy’; did you mean ‘va_copy’? [-Wimplicit-function-declaration]
     rot_copy(t3, t2);
     ^~~~~~~~
     va_copy
_mccode-r.c: At top level:
_mccode-r.c:2680:6: warning: conflicting types for ‘rot_copy’
 void rot_copy(Rotation dest, Rotation src)
      ^~~~~~~~
_mccode-r.c:2665:5: note: previous implicit declaration of ‘rot_copy’ was here
     rot_copy(t3, t2);
     ^~~~~~~~
_mccode-r.c:2750:8: error: conflicting types for ‘scalar_prod’
 double scalar_prod(
        ^~~~~~~~~~~
_mccode-r.c:2550:14: note: previous implicit declaration of ‘scalar_prod’ was here
   double t = scalar_prod(n.x, n.y, n.z, n.x, n.y, n.z);
              ^~~~~~~~~~~
_mccode-r.c: In function ‘mccoordschange’:
_mccode-r.c:2786:7: warning: implicit declaration of function ‘mccoordschange_polarisation’; did you mean ‘mccoordschange’? [-Wimplicit-function-declaration]
       mccoordschange_polarisation(t, &(particle->vx), &(particle->vy), &(particle->vz));
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
       mccoordschange
_mccode-r.c: At top level:
_mccode-r.c:2803:6: warning: conflicting types for ‘mccoordschange_polarisation’
 void mccoordschange_polarisation(Rotation t, double *sx, double *sy, double *sz)
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
_mccode-r.c:2786:7: note: previous implicit declaration of ‘mccoordschange_polarisation’ was here
       mccoordschange_polarisation(t, &(particle->vx), &(particle->vy), &(particle->vz));
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~
_mccode-r.c: In function ‘_randvec_target_circle’:
_mccode-r.c:2937:22: warning: implicit declaration of function ‘rand0max’; did you mean ‘random_r’? [-Wimplicit-function-declaration]
     theta = acos(1 - rand0max(2));
                      ^~~~~~~~
                      random_r
_mccode-r.c: In function ‘_randvec_target_rect_angular’:
_mccode-r.c:3007:5: warning: implicit declaration of function ‘randvec_target_circle’; did you mean ‘_randvec_target_circle’? [-Wimplicit-function-declaration]
     randvec_target_circle(xo, yo, zo, solid_angle, xi, yi, zi, 0);
     ^~~~~~~~~~~~~~~~~~~~~
     _randvec_target_circle
_mccode-r.c:3025:19: warning: implicit declaration of function ‘randpm1’; did you mean ‘random’? [-Wimplicit-function-declaration]
     phi   = width*randpm1()/2.0;
                   ^~~~~~~
                   random
_mccode-r.c: At top level:
_mccode-r.c:3381:18: error: unknown type name ‘randstate_t’; did you mean ‘__mbstate_t’?
 double _randnorm(randstate_t* state)
                  ^~~~~~~~~~~
                  __mbstate_t
_mccode-r.c:3410:19: error: unknown type name ‘randstate_t’; did you mean ‘__mbstate_t’?
 double _randnorm2(randstate_t* state) {
                   ^~~~~~~~~~~
                   __mbstate_t
_mccode-r.c:3421:22: error: unknown type name ‘randstate_t’; did you mean ‘__mbstate_t’?
 double _randtriangle(randstate_t* state) {
                      ^~~~~~~~~~~
                      __mbstate_t
_mccode-r.c:3428:16: error: unknown type name ‘randstate_t’; did you mean ‘__mbstate_t’?
 double _rand01(randstate_t* state) {
                ^~~~~~~~~~~
                __mbstate_t
_mccode-r.c:3437:17: error: unknown type name ‘randstate_t’; did you mean ‘__mbstate_t’?
 double _randpm1(randstate_t* state) {
                 ^~~~~~~~~~~
                 __mbstate_t
_mccode-r.c:3446:30: error: unknown type name ‘randstate_t’; did you mean ‘__mbstate_t’?
 double _rand0max(double max, randstate_t* state) {
                              ^~~~~~~~~~~
                              __mbstate_t
_mccode-r.c:3454:44: error: unknown type name ‘randstate_t’; did you mean ‘__mbstate_t’?
 double _randminmax(double min, double max, randstate_t* state) {
                                            ^~~~~~~~~~~
                                            __mbstate_t
_mccode-r.c: In function ‘sighandler’:
_mccode-r.c:3892:5: warning: implicit declaration of function ‘save’ [-Wimplicit-function-declaration]
     save(NULL);
     ^~~~
_mccode-r.c:3900:5: warning: implicit declaration of function ‘finally’ [-Wimplicit-function-declaration]
     finally();
     ^~~~~~~
_mini.c: In function ‘main’:
_mini.c:78:41: warning: implicit declaration of function ‘mccode_main’ [-Wimplicit-function-declaration]
 int main(int argc, char *argv[]){return mccode_main(argc, argv);}
                                         ^~~~~~~~~~~
_mini.c: In function ‘init’:
_mini.c:688:18: warning: implicit declaration of function ‘display’ [-Wimplicit-function-declaration]
   if (mcdotrace) display();
                  ^~~~~~~
_mini.c: In function ‘class_Source_simple_trace’:
_mini.c:759:18: warning: implicit declaration of function ‘rand01’; did you mean ‘rand_r’? [-Wimplicit-function-declaration]
    x = xwidth * (rand01() - 0.5);
                  ^~~~~~
                  rand_r
_mini.c:767:2: warning: implicit declaration of function ‘randvec_target_rect_real’; did you mean ‘_randvec_target_rect_real’? [-Wimplicit-function-declaration]
  randvec_target_rect_real(&xf, &yf, &rf, &pdir,
  ^~~~~~~~~~~~~~~~~~~~~~~~
  _randvec_target_rect_real
_mini.c:780:11: warning: implicit declaration of function ‘randnorm’; did you mean ‘random’? [-Wimplicit-function-declaration]
      E=E0+randnorm()*dE;
           ^~~~~~~~
           random
In file included from _mini.c:55:0:
_mccode-r.c: In function ‘detector_import’:
_mccode-r.c:860:57: warning: ‘ ’ directive output may be truncated writing 1 byte into a region of size between 0 and 1023 [-Wformat-truncation=]
     snprintf(detector.variables, CHAR_BUF_LENGTH, "%s %s %s_err N", detector.xvar, c, c);
                                                         ^
_mccode-r.c:860:5: note: ‘snprintf’ output 9 or more bytes (assuming 1032) into a destination of size 1024
     snprintf(detector.variables, CHAR_BUF_LENGTH, "%s %s %s_err N", detector.xvar, c, c);
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

